--- a/Rubyside/grid.css
+++ b/Rubyside/grid.css
@@ -1,3 +1,28 @@
+
+@media screen and (max-width: 600px) {
+  .topnav li a:not(:first-child) {display: none;}
+  .topnav li a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive li a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive li a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+
+
 .parent {
     display: flex;
     align-items: center;
