--- a/Rubyside/style.css
+++ b/Rubyside/style.css
@@ -8,7 +8,7 @@ html {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color:#FAE7E9;
+  background-color:white;
   line-height: 1.5;
 }
 
@@ -17,7 +17,7 @@ p {
 }
 
 header {
-  background-color:	#49AB98;
+  background-color:	#FAE7E9;
   color: white;
   height: 150px;
 }
@@ -57,7 +57,7 @@ ul {
 }
 
 li {
-    float: left;
+    float: right;
 }
 
 li a {
@@ -88,10 +88,19 @@ li a:hover {
   cursor: pointer;
 }
 
+.title {
+  padding-top:100px;
+  text-align:center;
+  color: #D1142F;
+  font-size: 28px;
+  padding-bottom: 10px;
+}
+
 .button {
   display:block;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 20px;
   border: none;
   color:white;
   background-color: #D1142F;
@@ -108,15 +117,20 @@ li a:hover {
 .organisers {
   position:relative;
   height:auto;
-  top:40px;
+  top:30px;
   /* left:calc(20%); */
   /* animation-name: move;
   animation-duration: 2s; */
   transition-property: top;
   transition-duration: 2s;
-  display:inline;
+  /* display:inline; */
   /* margin-left: auto;
   margin-right: auto; */
+}
+
+.organiserNames {
+  display: inline;
+  margin-right: 10px;
 }
 
 .organisers img {
