--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -1,16 +1,26 @@
+/*
+This sets the font for the whole page
+*/
 html {
   font-family: sans-serif;
 }
 
+/*
+This sets the margin and padding to 0 for everything.
+*/
 * {
   margin: 0;
   padding: 0;
 }
-
+/*
+This is the styling for the body
+*/
 body {
   width:100%;
 }
-
+/*
+This is the styling for the header.
+*/
 header {
   text-align: center;
   background-color: #044C62;
@@ -21,17 +31,10 @@ header {
   /* transition: top 0.2s ease-in-out; */
 }
 
-/* .sticky {
-  position: fixed;
-  top: 0;
-  width: 100%
 
-}
-
-.sticky + .content {
-  padding-top: 102px;
-} */
-
+/*
+This is the styling for the header links.
+*/
 header a {
   color: white;
   font-size: 20px;
@@ -40,6 +43,9 @@ header a {
   text-decoration: none;
 }
 
+/*
+This is the styling for the header links on hover.
+*/
 header a:hover {
   padding:5px;
   margin-left: 0;
@@ -48,7 +54,9 @@ header a:hover {
 }
 
 
-
+/*
+This is the styling for the header links when they have been visited.
+*/
 header a:visited {
   padding:5px;
   margin-left: 0;
@@ -56,6 +64,9 @@ header a:visited {
   border:3px solid white;
 }
 
+/*
+This is the styling for the back to top of page button.
+*/
 .bounce {
   float:right;
   position: fixed;
@@ -68,6 +79,9 @@ header a:visited {
   cursor: pointer;
 }
 
+/*
+This is the styling for the me class
+*/
 .me {
   text-align: center;
   font-family: sans-serif;
