--- a/SpinTheMoose/app.scss
+++ b/SpinTheMoose/app.scss
@@ -6,14 +6,16 @@
  //this is the styling for the html, it sets the font for everything as 'proxima-nova', sans-serif;
 html {
   font-family: 'proxima-nova', sans-serif;
+  max-width: 100%;
 
 //This sets the style for the stall class
 .stall {
-  width: 100%;
+  max-width: 100%;
   height: 500px;
   background-image: url("Images/stall.png");
   background-repeat: no-repeat;
   background-size: contain;
+
 
 //This sets thes style of the parent class
   .parent {
@@ -48,9 +50,9 @@ html {
       }
       //This is the styling for the cell class
         .cell {
-          margin: 0 0.5rem;
-        }
-        .small-6{
+          // margin: 0 0.5rem;
+          max-width: 100%;
+
           //This is the styling for the h2 tags in these containers
           h2{
             text-align: right;
@@ -59,7 +61,6 @@ html {
              padding-left: 500px;
           }
         }
-
   }
   //This is the styling for the button class
   .button{
@@ -88,12 +89,14 @@ html {
     @media(max-width: 640px) {
       button {
         // content:"Spin!";
-          height: 45px;
-          width: 60px;
-          font-size: 12px;
-          left: calc(10%);
-          margin-top: calc(-16%);
+          height: 35px;
+          width: 35px;
+          font-size: 8px;
+          left: calc(6%);
+          margin-top: calc(-17%);
           padding:0;
+          box-shadow: 0 3px #999;
+
       }
     }
     //This is the styling for the buttons on hover
@@ -117,9 +120,9 @@ html {
 
   @media(max-width: 640px) {
     .spinner {
-        height: 75px;
-        left: calc(40%);
-        margin-top: calc(-3%);
+        height: 50px;
+        left: calc(31%);
+        margin-top: calc(-8%);
     }
 }
 
@@ -134,10 +137,10 @@ html {
 
   @media(max-width: 640px) {
     .moose {
-        height: 20px;
-        width: 40px;
-        left: calc(45%);
-        margin-top: calc(3%);
+        height: 10px;
+        width: 20px;
+        left: calc(37%);
+        margin-top: calc(-2%);
     }
   }
 
@@ -146,6 +149,7 @@ html {
   position: absolute;
   right: calc(-3%);
   top: calc(40%);
+
 
 
   //This is the class attached to the triangle which is part of the speech bubble and defines the styling for it
@@ -158,6 +162,11 @@ html {
     fill: #F4A6BC;
     float: right;
   }
+  }
+  @media(max-width: 640px) {
+    .speech svg {
+        display: none;
+    }
   }
 
 //This is the class attached to the speech bubble and defines the position for it
@@ -175,6 +184,18 @@ html {
       display: block;
       padding-left: 30px;
     }
+    @media(max-width: 640px) {
+      .prizes {
+        padding-left: 10px;
+      }
+    }
+}
+@media(max-width: 640px) {
+  .bubble {
+    font-size: 6px;
+      left: calc(-5%);
+      margin-top: calc(-83%);
+  }
 }
 
 //This is the styling for the modal box
@@ -189,6 +210,16 @@ html {
   background-color: rgb(0,0,0);
   background-color: rgba(0,0,0,0.4);
 }
+
+// @media(max-width: 640px) {
+//   .modal {
+//     width: 60%;
+//     height: 50%;
+//     float: left;
+//     margin-right: 50px;
+//   }
+// }
+
 //This is the styling for the model content
   .modal-content {
     background-color: #FCEB60;
@@ -266,6 +297,22 @@ html {
       box-shadow: 0 5px #666;
       transform: translateY(4px);
     }
+  }
+  @media(max-width: 640px) {
+    .modal-content {
+
+      padding: 5px;
+      width: 33%;
+      height: 25%;
+      float: left;
+      // margin-right: 50px;
+    }
+  }
+
+}
+@media(max-width: 640px) {
+  .stall {
+      max-width: 75%;
   }
 }
 
